force-app/main/default/objects/Credit_Cards__c/Credit_Cards__c.object-meta.xml
<CustomObject>
    <label>Credit Cards</label>
    <nameField>
        <label>Card ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>