force-app/main/default/objects/Credit_Cards__c/fields/Credit_Card_Balance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Balance__c</fullName>
    <label>Credit Card Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>