force-app/main/default/objects/Credit_Cards__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer ID</label>
    <referenceTo>Customers__c</referenceTo>
    <relationshipLabel>Credit Cards</relationshipLabel>
    <relationshipName>Credit_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>