force-app/main/default/objects/Credit_Cards__c/fields/Last_Credit_Card_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Credit_Card_Payment_Date__c</fullName>
    <label>Last Credit Card Payment Date</label>
    <type>Date</type>
</CustomField>