force-app/main/default/objects/Credit_Cards__c/fields/Minimum_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Payment_Due__c</fullName>
    <label>Minimum Payment Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>